Trim redundant content from published jar and make tests JDK 8 compatible (#2079)
- Stop protobuf-maven-plugin from attaching .proto sources to the artifact
  (attachProtoSources=false), removing ~144KB of unused proto source text.
- Remove unused log4j2.xml and milvus-client.properties resources from the
  published jar; the SDK only uses slf4j and reads the version from the jar
  manifest, and nothing in main or test code reads these files.
- Replace JDK 9+ APIs in sdk-core test sources (Optional.orElseThrow(),
  List.of(), Map.of(), String.repeat()) with JDK 8 equivalents so mvn test
  works with JDK 8 or later.
- Simplify RPC error logging in RpcUtils to varargs form (slf4j short-circuits
  formatting internally), log full exception stacks in LocalBulkWriter, and
  downgrade the per-file upload log in VolumeFileManager to debug.
- Add a test-scope slf4j-simple binding to sdk-core and sdk-bulkwriter so
  guarded log lines execute under mvn test and patch coverage reflects them.
- Make VectorDockerTest.testFloatVectors use a FLAT index so the top-1 search
  hit assertion is exact, and add diagnostic prints to
  MultiClientAsyncTest.testAsyncMethods for the flaky count assertion.
- Fix release validation in publish-release.yaml: grant checks:read and
  pull-requests:read to the validate job, and resolve CI status from the PR
  head commit that produced the tagged commit (squash-merge records the CI
  check on the PR head, not on the merged commit).
- Harden extract_changelog.sh version matching so pre-release suffixes such as
  3.0.3-rc1 no longer match a search for 3.0.3.
- Use Strong consistency in MultiClientAsyncTest search/query so reads always
  see the latest committed rows after flush, fixing the intermittent
  expected 10 but was 9 count assertion without polling.

Signed-off-by: yhmo <yihua.mo@zilliz.com>
(cherry picked from commit 361fc129cb60a2253e54c78a762183646449822d)

Signed-off-by: yhmo <yhmo@users.noreply.github.com>